--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img src="./media/004.png" alt="">
       <img src="./media/007.png" alt="">
       <img src="./media/008.png" alt="">
-    </div>
+    </div><hr>
 
     <h1>¡Alimento para Mascotas!</h1>
      <div class="container-2">
