varios arreglos y detalles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
       <center>
         <picture>
-          <img src="./media/logo8.png" alt="main" height="200"> 
+          <img src="./media/logonuevo0.png" alt="main" height="150"> 
         </picture>
       </center>
     </div>
@@ -28,8 +28,7 @@
         <center>
           <a href="index.html">Nosotros</a>
           <a href="/page/mascotas.html">Mascotas</a>
-          <a href=
-          /page/ubicacion.html">Ubicacion</a>
+          <a href="/page/ubicacion.html">Ubicacion</a>
           <a href="/page/comentarios.html">Comentarios</a>
          <div class="animation start-Nosotros"></div> 
       </center>
@@ -45,20 +44,21 @@
     </div><hr>
 
     <h1>¡Alimento para Mascotas!</h1>
-     <div class="container-2">
-      <img src="../media/Alimentacion.png" alt="" width="300px"/>
+    <center> 
+    <div class="container-2">
+      <img src="../media/Alimentacion.png" alt="" width="200px"/></div>
        <div class="objeto">
         <h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
          <p class="parrafo-oculto">Los CDC no recomiendan darles alimentos crudos a las mascotas.
           Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.</p>
        </div>
-
-       <img src="../media/enlatado.jpg" alt="" width="300px" />
+       <div class="container-2">
+       <img src="../media/enlatado.jpg" alt="" width="300px" /></div>
        <div class="objeto">
          <h2>¿Alimentos secos o enlatados para mascotas?</h2>
           <p class="parrafo-oculto">Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. </p>
        </div>
-    
+      </center>
      </div>
   </main>
 
