--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
       <center>
         <picture>
-          <img src="./media/logonuevo0.png" alt="main" height="150"> 
+          <img src="./media/logonuevo0.png" alt="main" height=""> 
         </picture>
       </center>
     </div>
@@ -45,14 +45,14 @@
     <h1>¡Alimento para Mascotas!</h1>
     <center> 
     <div class="container-2">
-      <img src="../media/Alimentacion.png" alt="" width="200px"/></div>
+      <img src="../media/Alimentacion.png" alt="" width="150px"/></div>
        <div class="objeto">
         <h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
          <p class="parrafo-oculto">Los CDC no recomiendan darles alimentos crudos a las mascotas.
           Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.</p>
        </div>
        <div class="container-2">
-       <img src="../media/enlatado.jpg" alt="" width="300px" /></div>
+       <img src="../media/enlatado.jpg" alt="" width="150px" /></div>
        <div class="objeto">
          <h2>¿Alimentos secos o enlatados para mascotas?</h2>
           <p class="parrafo-oculto">Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. </p>
