--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
   <header>
-    <div>
+
       <center>
         <picture>
-          <img src="./media/logonuevo0.png" alt="main" height=""> 
+          <img src="./media/logonuevo0.png" alt="main"> 
         </picture>
       </center>
-    </div>
+
     <div>  
       <nav>
         <center>
