arreglo de logo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 <body>
   <header>
-
     <center>
-      <img src="./media/logonuevo0.png" alt="main">  
+      <picture>
+      <img src="./media/logonuevo0.png" alt="main" >  
+    </picture>
+    
     </center>
 
     <div>  
@@ -44,8 +46,10 @@
     <h1>¡Alimento para Mascotas!</h1>
     <center> 
     <div class="container-2">
+
       <img src="../media/Alimentacion.png" alt="" width="250px"/></div>
-       <div class="objeto">
+      
+      <div class="objeto">
         <h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
          <p class="parrafo-oculto">Los CDC no recomiendan darles alimentos crudos a las mascotas.
           Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.</p>
