--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <center> 
     <div class="container-2">
 
-      <img src="../media/Alimentacion.png" alt="" width="250px"/></div>
+      <img src="../media/Alimentacion.png" alt="" width="180px"/></div>
       
       <div class="objeto">
         <h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
@@ -55,7 +55,7 @@
           Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.</p>
        </div>
        <div class="container-2">
-       <img src="../media/enlatado.jpg" alt="" width="250px" /></div>
+       <img src="../media/enlatado.jpg" alt="" width="180px" /></div>
        <div class="objeto">
          <h2>¿Alimentos secos o enlatados para mascotas?</h2>
           <p class="parrafo-oculto">Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. </p>
@@ -67,6 +67,7 @@
   <footer>
      <div align="center">
       <h4>Webmasters: Maria, Liliana, Pablo</h4>
+      <img src="./media/redes.png" alt="" height="23">
     </div>
   </footer>
     
