--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </main>
 
   <footer>
-     <div align="center">
+     <div align="center"><hr>
       <h4>Webmasters: Maria, Liliana, Pablo</h4>
       <img src="./media/redes.png" alt="" height="23">
     </div>
