--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
   </main>
 
   <footer>
-     <div align="center"><hr>
+    <div align="center"><hr>
+      <img src="../media/redes.png" alt="" height="23">
       <h4>Webmasters: Maria, Liliana, Pablo</h4>
-      <img src="./media/redes.png" alt="" height="23">
+       
     </div>
   </footer>
     
