estilos de menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <img src="./media/004.png" alt="">
       <img src="./media/007.png" alt="">
       <img src="./media/008.png" alt="">
-    </div><hr>
+    </div>
 
     <h1>¡Alimento para Mascotas!</h1>
     <center> 
