--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
   </header>
 
   <main>
+    <h1> Productos Destacados </h1>
     <div class="banner">
+     
       <img src="./media/002.png" alt="">
       <img src="./media/004.png" alt="">
       <img src="./media/007.png" alt="">
@@ -55,7 +57,7 @@
           Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.</p>
        </div>
        <div class="container-2">
-       <img src="../media/enlatado.jpg" alt="" width="180px" /></div>
+       <img src="../media/enlatado.jpg" alt="" width="200px" /></div>
        <div class="objeto">
          <h2>¿Alimentos secos o enlatados para mascotas?</h2>
           <p class="parrafo-oculto">Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. </p>
