--- a/index.html
+++ b/index.html
@@ -1,74 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&family=Unna&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/style.css" />
-  <link rel="stylesheet" href="assets/banner.css" />
-  <link rel="stylesheet" href="..assets/style.js" />
-  <title>Pet Shop</title>
+<title>Pet Shop</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="css/banner.css" rel="stylesheet"  />
+<!--[if IE 6]><link href="css/ie6.css" rel="stylesheet" type="text/css"><![endif]-->
+<!--[if IE 7]><link href="css/ie7.css" rel="stylesheet" type="text/css"><![endif]-->
+ 
 </head>
-
 <body>
-  <header>
-    <div>
-      <center>
-        <picture>
-          <img src="./media/logo8.png"" alt="main" height="200"> 
-        </picture>
-      </center>
+<div id="header"> <a href="#" id="logo"><img src="images/logo.png" width="310" height="114" alt=""></a>
+  <ul class="navigation">
+    <li class="active"><a href="index.html">Nosotros</a></li>
+    <li><a href="page/mascotas.html">Mascotas</a></li>
+    <li><a href="page/comentarios.html">Comentarios</a></li>
+    <li><a href="page/contacto.html">Contacto</a></li>
+  </ul>
+</div>
+<div id="body">
+  <div class="imagen-responsive">&nbsp;</div>
+  <div id="content">
+    <div class="content">
+      <ul>
+        <li> <a href="#"><img src="images/Alimentacion.png" width="114" height="160" alt=""></a>
+          <h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
+          <p>Los CDC no recomiendan darles alimentos crudos a las mascotas.
+            Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.></p>
+        </li>
+        <li> <a href="#"><img src="images/puppy2.jpg" width="114" height="160" alt=""></a>
+          <h2>¿Alimentos secos o enlatados para mascotas?</h2>
+          <p>Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. ></p>
+        </li>
+        <li> <a href="#"><img src="images/cat2.jpg" width="114" height="160" alt=""></a>
+          <h2>La mascota adecuada para tu familia</h2>
+          <p>Algunas mascotas tienen buen carácter y son más adecuadas para estar con niños: Los perros tales como los labradores, los golden retriever  (perdiguero dorado) y los beagle (sabueso) tienden a ser cariñosos con los niños.</p>
+        </li>
+        </ul>
     </div>
-    <div>  
-      <nav>
-        <center>
-          <a href="index.html">Nosotros</a>
-          <a href="/page/mascotas.html">Mascotas</a>
-          <a href="/page/ubicacion.html">Ubicacion</a>
-          <a href="/page/comentarios.html">Comentarios</a>
-<<<<<<< HEAD
-          <div class="animation start-Nosotros"></div>
-=======
-         <div class="animation start-Nosotros"></div> 
->>>>>>> 3a025f9 (nuevos cambios)
-      </center>
-      </nav>
     </div>
-  </header>
-  <main>
+  </div>
+  <br>
+  <center>
+  <h1>¡Lo llevamos a tu casa!</h1>
+  </center>
     <div class="banner">
-      <img src="./media/002.png" alt="">
-      <img src="./media/004.png" alt="">
-      <img src="./media/007.png" alt="">
-      <img src="./media/008.png" alt="">
-    </div>
+    <img src="./images/002.png"  alt="">
+    <img src="./images/007.png" alt=""  >
+    <img src="./images/008.png" alt="" >
+    <img src="./images/images (5).jpeg" alt="" >
+    <img src="./images/images (1).jpeg" alt="" >
+    <img src="./images/descarga (1).jpeg" alt="">
+     <img src="./images/" alt="">
+  </div><hr>
+<div id="footer">
+  <div class="section">
     <center>
-      <h1>¡Alimento para Mascotas!</h1>
-    </center>
-<div class="container" >
-<img src="../media/Alimentacion.png" alt="" width="300px" />
-<div class="objeto">
-<h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
-<p class="parrafo-oculto">Los CDC no recomiendan darles alimentos crudos a las mascotas.
-  Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.</p>
-</div>
-<img src="../media/enlatado.jpg" alt="" width="300px" />
-<div class="objeto">
-<h2>¿Alimentos secos o enlatados para mascotas?</h2>
-<p class="parrafo-oculto">Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. </p>
-</div>
-</div>
-</main>
-  <footer>
-    <div align="center">
-      <h4>Webmasters: Maria, Liliana, Pablo</h4>
-    </div>
-  </footer>
-
+    <ul>
+       <li><h2> Mary</h2>
+      </li>    
+       <li><h2> Pablo</h2>    
+      </li>
+      <li><h2>Liliana</h2>
+      </li>
+    </center> 
+  </div>
 </body>
-
 </html>
