--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li class="active"><a href="index.html">Nosotros</a></li>
     <li><a href="page/mascotas.html">Mascotas</a></li>
     <li><a href="page/comentarios.html">Comentarios</a></li>
-    <li><a href="page/contacto.html">Contacto</a></li>
+    <li><a href="page/ubicacion.html">Ubicacion</a></li>
   </ul>
 </div>
 <div id="body">
@@ -58,12 +58,9 @@
   <div class="section">
     <center>
     <ul>
-       <li><h2> Mary</h2>
+       <li><h2> Mary - Pablo - Liliana </h2>
       </li>    
-       <li><h2> Pablo</h2>    
-      </li>
-      <li><h2>Liliana</h2>
-      </li>
+         
     </center> 
   </div>
 </body>
