--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <title>Pet Shop</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="css/banner.css" rel="stylesheet"  />
+<link href="assets/css/style.css" rel="stylesheet" type="text/css">
+<link href="assets/css/banner.css" rel="stylesheet"  />
 <!--[if IE 6]><link href="css/ie6.css" rel="stylesheet" type="text/css"><![endif]-->
 <!--[if IE 7]><link href="css/ie7.css" rel="stylesheet" type="text/css"><![endif]-->
  
 </head>
 <body>
-<div id="header"> <a href="#" id="logo"><img src="images/logo.png" width="310" height="114" alt=""></a>
+<div id="header"> <a href="#" id="logo"><img src="media/logo.png" width="310" height="114" alt=""></a>
   <ul class="navigation">
     <li class="active"><a href="index.html">Nosotros</a></li>
     <li><a href="page/mascotas.html">Mascotas</a></li>
@@ -24,16 +24,16 @@
   <div id="content">
     <div class="content">
       <ul>
-        <li> <a href="#"><img src="images/Alimentacion.png" width="114" height="160" alt=""></a>
+        <li> <a href="#"><img src="media/Alimentacion.png" width="114" height="160" alt=""></a>
           <h2>¿Los alimentos crudos pueden enfermar a las mascotas?</h2>
           <p>Los CDC no recomiendan darles alimentos crudos a las mascotas.
             Se han encontrado bacterias como Salmonella y Listeria en los alimentos crudos para mascotas, incluso en los envasados que se venden en las tiendas. Estos microbios pueden enfermar a su mascota. Su familia también se puede enfermar al manipular el alimento crudo o cuidar a la mascota.></p>
         </li>
-        <li> <a href="#"><img src="images/puppy2.jpg" width="114" height="160" alt=""></a>
+        <li> <a href="#"><img src="media/puppy2.jpg" width="114" height="160" alt=""></a>
           <h2>¿Alimentos secos o enlatados para mascotas?</h2>
           <p>Los alimentos secos o enlatados también pueden estar contaminados con microbios. Antes de hacer cambios en la alimentación de su mascota, hable con su veterinario.. ></p>
         </li>
-        <li> <a href="#"><img src="images/cat2.jpg" width="114" height="160" alt=""></a>
+        <li> <a href="#"><img src="media/cat2.jpg" width="114" height="160" alt=""></a>
           <h2>La mascota adecuada para tu familia</h2>
           <p>Algunas mascotas tienen buen carácter y son más adecuadas para estar con niños: Los perros tales como los labradores, los golden retriever  (perdiguero dorado) y los beagle (sabueso) tienden a ser cariñosos con los niños.</p>
         </li>
@@ -46,13 +46,13 @@
   <h1>¡Lo llevamos a tu casa!</h1>
   </center>
     <div class="banner">
-    <img src="./images/002.png"  alt="">
-    <img src="./images/007.png" alt=""  >
-    <img src="./images/008.png" alt="" >
-    <img src="./images/images (5).jpeg" alt="" >
-    <img src="./images/images (1).jpeg" alt="" >
-    <img src="./images/descarga (1).jpeg" alt="">
-     <img src="./images/" alt="">
+    <img src="./nedia/002.png"  alt="">
+    <img src="./media/007.png" alt=""  >
+    <img src="./media/008.png" alt="" >
+    <img src="./media/images (5).jpeg" alt="" >
+    <img src="./media/images (1).jpeg" alt="" >
+    <img src="./media/descarga (1).jpeg" alt="">
+     <img src="./media/" alt="">
   </div><hr>
 <div id="footer">
   <div class="section">
