--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <title>Pet Shop</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link href="assets/css/style.css" rel="stylesheet" type="text/css">
-<link href="assets/css/banner.css" rel="stylesheet"  />
-<!--[if IE 6]><link href="css/ie6.css" rel="stylesheet" type="text/css"><![endif]-->
-<!--[if IE 7]><link href="css/ie7.css" rel="stylesheet" type="text/css"><![endif]-->
- 
+<link href="/assets/css/style.css" rel="stylesheet" type="text/css">
+<link href="/assets/css/banner.css" rel="stylesheet"  />
+<link href="/assets/style.js" rel="stylesheet"  />
+<link href="/assets/form.js" rel="stylesheet"  />
+
 </head>
 <body>
 <div id="header"> <a href="#" id="logo"><img src="media/logo.png" width="310" height="114" alt=""></a>
   <ul class="navigation">
-    <li class="active"><a href="index.html">Nosotros</a></li>
+    <li class="active"><a href="/index.html">Nosotros</a></li>
     <li><a href="page/mascotas.html">Mascotas</a></li>
     <li><a href="page/comentarios.html">Comentarios</a></li>
     <li><a href="page/ubicacion.html">Ubicacion</a></li>
@@ -46,7 +46,7 @@
   <h1>¡Lo llevamos a tu casa!</h1>
   </center>
     <div class="banner">
-    <img src="./nedia/002.png"  alt="">
+    <img src="./media/002.png"  alt="">
     <img src="./media/007.png" alt=""  >
     <img src="./media/008.png" alt="" >
     <img src="./media/images (5).jpeg" alt="" >
