--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <title>Pet Shop</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
 <link href="/assets/css/banner.css" rel="stylesheet"  />
-<link href="/assets/js/style.js" rel="stylesheet"  />
-<link href="/assets/js/form.js" rel="stylesheet"  />
+<link href="/assets/style.js" rel="stylesheet"  />
+<link href="/assets/form.js" rel="stylesheet"  />
+
 </head>
-<div id="body">
-<div id="header"> <a href="#" id="logo"><img src="/media/logo.png" width="310" height="114" alt=""></a>
+<body>
+<div id="header"> <a href="#" id="logo"><img src="media/logo.png" width="310" height="114" alt=""></a>
   <ul class="navigation">
     <li class="active"><a href="/index.html">Nosotros</a></li>
-    <li><a href="/page/mascotas.html">Mascotas</a></li>
-    <li><a href="/page/comentarios.html">Comentarios</a></li>
-    <li><a href="/page/ubicacion.html">Ubicacion</a></li>
+    <li><a href="page/mascotas.html">Mascotas</a></li>
+    <li><a href="page/comentarios.html">Comentarios</a></li>
+    <li><a href="page/ubicacion.html">Ubicacion</a></li>
   </ul>
 </div>
- <div id="content">
+<div id="body">
   <div class="imagen-responsive">&nbsp;</div>
-  
+  <div id="content">
     <div class="content">
       <ul>
         <li> <a href="#"><img src="media/Alimentacion.png" width="114" height="160" alt=""></a>
@@ -40,10 +42,10 @@
     </div>
     </div>
   </div>
-   
-     <div id="main"> 
-   <h1>¡Lo llevamos a tu casa!</h1>
-  
+  <br>
+  <center>
+  <h1>¡Lo llevamos a tu casa!</h1>
+  </center>
     <div class="banner">
     <img src="./media/002.png"  alt="">
     <img src="./media/007.png" alt=""  >
@@ -54,10 +56,13 @@
      <img src="./media/" alt="">
   </div><hr>
 <div id="footer">
-  <center>
-    <h2> Mary - Pablo - Liliana </h2>
-  </center>
-</div>
+  <div class="section">
+    <center>
+    <ul>
+       <li><h2> Mary - Pablo - Liliana </h2>
+      </li>    
+         
+    </center> 
   </div>
- </body>
+</body>
 </html>
